UPDATE: Fixed an overflow bug on the navbar where the mobile view could shift horizontally

--- a/style.css
+++ b/style.css
@@ -236,4 +236,8 @@ body {
     font-size: 2rem;
     text-align: center;
   }
+
+  .sticky-top {
+    overflow: hidden;
+  }
 }
